fix(conf): Change default conf value

--- a/conf/instance-reset.conf.dist
+++ b/conf/instance-reset.conf.dist
@@ -9,8 +9,8 @@ instanceReset.Enable=true
 
 #############
 #
-# Only remove save of the normal instances.
-# default: true
+# Only remove save of the normal instances. (TODO: Dynamically warn the user if this setting is set to true)
+# default: false
 #
 
-instanceReset.NormalModeOnly = true
+instanceReset.NormalModeOnly = false
