Module using deprecated loader api (#19)

--- a/conf/instance-reset.conf.dist
+++ b/conf/instance-reset.conf.dist
@@ -15,4 +15,10 @@ instanceReset.Enable=true
 
 instanceReset.NormalModeOnly = false
 
+#############
+#
+# If true, announces the module to the player.
+# default: true
+#
+
 instanceReset.Announcer = true
